fix bug when calculating the height of the all day event table; add overflow-scroll='false' to use native scrolling; use ion-content instead of ion-scroll;

--- a/css/rcalendar/calendar.css
+++ b/css/rcalendar/calendar.css
@@ -35,7 +35,6 @@
     padding: 8px;
     line-height: 1.428571429;
     vertical-align: top;
-    border-top: 1px solid #ddd;
 }
 
 .table > thead > tr > th {
@@ -165,18 +164,21 @@
     line-height: 50px;
     text-align: center;
     width: 50px;
-    border: 1px solid #ddd;
-    border-right-width: 0;
 }
 
 .weekview-allday-content-wrapper, .dayview-allday-content-wrapper {
     margin-left: 50px;
     overflow: hidden;
-    height: 100%;
+    height: 51px;
 }
 
 .weekview-allday-content-table, .dayview-allday-content-table {
-    height: 50px;
+    min-height: 50px;
+}
+
+.weekview-allday-content-table td, .dayview-allday-content-table td {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 }
 
 .monthview-slide {
@@ -194,14 +196,18 @@
 
 .weekview-allday-table, .dayview-allday-table {
     height: 50px;
+    position: relative;
+    border-bottom: 1px solid #ddd;
 }
 
 .weekview-normal-event-container {
     margin-top: 87px;
+    overflow: hidden;
 }
 
 .dayview-normal-event-container {
     margin-top: 47px;
+    overflow: hidden;
 }
 
 @media (max-width: 750px) {
@@ -211,7 +217,7 @@
     }
 
     .weekview-normal-event-container {
-        margin-top: 82px;
+        margin-top: 83px;
     }
 
     .table > tbody > tr > td.calendar-hour-column {
@@ -231,7 +237,7 @@
     }
 
     .weekview-allday-content-wrapper, .dayview-allday-content-wrapper {
-        margin-left: 28px;
+        margin-left: 30px;
     }
 
     .calendar-event-inner {
